--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ plugins:
 - jekyll-paginate
 
 # 3. Gem settings
-paginate: 2 # jekyll-paginate > items per page
+paginate: 4 # jekyll-paginate > items per page
 paginate_path: page:num # jekyll-paginate > blog page
 
 # 4. Jekyll settings
@@ -37,9 +37,9 @@ timezone: Europe/London # Timezone for blog posts and alike
 # 5. Collections
 collections:
   posts:
-    title: Blog # Needed for Siteleaf
+    title: Love Notes # Needed for Siteleaf
     output: true
-    description: "This is merely a demo, find out more [about Garth](about)" # The post list page content
+    description: "Love notes transcend distance, time, cultural differences. Love notes are for souls, forever" # The post list page content
 
 # 6. Jekyll collections settings
 defaults:
@@ -58,10 +58,10 @@ defaults:
 
 # 7. Site settings
 encoding: utf-8 # Make sure the encoding is right
-title: "Garth" # Site name or title
+title: "Ich Liebe Dich" # Site name or title
 logo: "/assets/logo.svg" # Site logo
 # favicon: "/favicon.ico" # Uncomment to add custom favicon, or leave as is to use site logo
-description: "A really basic theme for Jekyll, using the official Jekyll theme implementation" # Site description and default description
-url: "https://garth.darn.es" # Site url
-baseurl: ""
+description: "Uber alles in der Welt, bis der Mond und zuruck" # Site description and default description
+url: "https://astrabert.github.io" # Site url
+baseurl: "/love-notes" # Site baseurl
 lang: en-GB
