--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ defaults:
 encoding: utf-8 # Make sure the encoding is right
 title: "LoveNotes" # Site name or title
 logo: "/assets/logo.svg" # Site logo
-favicon: "/favicon.ico" # Uncomment to add custom favicon, or leave as is to use site logo
+favicon: "/assets/favicon.ico" # Uncomment to add custom favicon, or leave as is to use site logo
 description: "Share your love through poems, songs, and other notes" # Site description and default description
 url: "https://astrabert.github.io" # Site url
 baseurl: "/love-notes" # Site baseurl
